-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 4.9.0, Qt Creator 4.9.1
-
None
-
All OSes, Qt 5.12.2, Qt Creator 4.9.X GCC 8.3.0 MinGW-w64 6.0.0
-
-
8dd8d68bdc0a2c961d516c80a6b8b3a557c266bf (qt-creator/qt-creator/4.9), 0dc533ad670260a7e11ad36ec932c98614f7ca6d
issue is $/src/shared/proparser
lots of file have wrong order with
QT_BEGIN_NAMESPACE
and
using namespace QMakeInternal;
scan all files and make all using namespace QMakeInternal;
in QT_BEGIN_NAMESPACE and QT_END_NAMESPACE
fix this issue.
| For Gerrit Dashboard: QTCREATORBUG-22305 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 259654,3 | Fix Windows build build with namespaced Qt | 4.9 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 263642,2 | Fix Windows build build with namespaced Qt | 4.9 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |