Fix Windows build build with namespaced Qt

For real this time. Amends 8dd8d68bdc.

Fixes: QTCREATORBUG-22305
Change-Id: I61133f76b7e39a2b0168f8a6c19721231d443807
Reviewed-by: Christian Stenger <christian.stenger@qt.io>